174A-65: Merge colecciones (POST /api/colecciones/:id/merge)
